--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - echo deb http://ubuntu.openturns.org precise main | sudo tee /etc/apt/sources.list.d/openturns.list
   - sudo add-apt-repository ppa:martin-gieseking/ppa -y
   - sudo apt-get update
-  - sudo apt-get -y install libopenturns-dev python-openturns cmake gfortran swig texlive-latex-recommended texlive-fonts-recommended texlive-latex-extra python-sphinx python-matplotlib dvisvgm
+  - sudo apt-get -y install libopenturns-dev python-openturns r-other-rot cmake gfortran swig texlive-latex-recommended texlive-fonts-recommended texlive-latex-extra python-sphinx python-matplotlib dvisvgm
 # sphinx >=1.2 is looking better
   - pip install git+https://github.com/sphinx-doc/sphinx.git --user
 
