--- a/python/src/LinearModelAnalysis_doc.i.in
+++ b/python/src/LinearModelAnalysis_doc.i.in
@@ -1,13 +1,13 @@
 %feature("docstring") OTLMR::LinearModelAnalysis
-"Class used to create a linear model from numerical samples.
+"Class used to analyse a linear model.
 
 **Available usages**:
 
-    LinearModelAnalysis(Xsample, Ysample)
+    LinearModelAnalysis(linearModelResult)
 
 See Also
 --------
-LinearModel, LinearModelResult
+LinearModelResult
 
 Notes
 -----
@@ -37,23 +37,166 @@ the residual couples :math:`(\epsilon_i, \epsilon_{i+1})`, where the residual
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OTLMR::LinearModelAnalysis::getInputSample
-"Accessor to the input sample.
+%feature("docstring") OTLMR::LinearModelAnalysis::getLinearModelResult
+"Accessor to the linear model result.
 
 Returns
 -------
-inputSample : :class:`~openturns.NumericalSample`
-    The Xsample which had been passed to the constructor."
+linearModelResult : :class:`~openturns.LinearModelResult`
+    The  linear model result which had been passed to the constructor."
+
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OTLMR::LinearModelAnalysis::getOutputSample
-"Accessor to the output sample.
+%feature("docstring") OTLMR::LinearModelAnalysis::getFormula
+"Accessor to the formula.
 
 Returns
 -------
-outputSample : :class:`~openturns.NumericalSample`
-    The Ysample which had been passed to the constructor."
+condensedFormula : :class:`~openturns.String`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getCoefficientsNames
+"Accessor to the coefficients names.
+
+Returns
+-------
+coefficientsNames : :class:`~openturns.Description`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getResiduals
+"Accessor to the residuals.
+
+Returns
+-------
+sampleResiduals : :class:`~openturns.NumericalSample`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getStandardizedResiduals
+"Accessor to the standardized residuals.
+
+Returns
+-------
+standardizedResiduals : :class:`~openturns.NumericalSample`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getCoefficientsEstimates
+"Accessor to the coefficients of the linear model of the trend.
+
+Returns
+-------
+beta : :class:`~openturns.NumericalSample`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getCoefficientsStandardErrors
+"Accessor to the coefficients of standard error.
+
+Returns
+-------
+standardErrors : :class:`~openturns.NumericalSample`
+"
+
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getCoefficientsTScores
+"Accessor to the coefficients of linear expansion over their standard error.
+
+Returns
+-------
+tScores : :class:`~openturns.NumericalSample`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getCoefficientsPValues
+"Accessor to the coefficients of the p values.
+
+Returns
+-------
+pValues : :class:`~openturns.NumericalSample`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getLeverages
+"Accessor to the leverages.
+
+Returns
+-------
+leverages : :class:`~openturns.NumericalPoint`
+"
+
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getCookDistances
+"Accessor to the cook's distances.
+
+Returns
+-------
+cookDistances : :class:`~openturns.NumericalPoint`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getDegreesOfFreedom
+"Accessor to the number of degrees of freedom.
+
+Returns
+-------
+dof : :class:`~openturns.UnsignedInteger`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getRSquared
+"Accessor to the R-squared test.
+
+Returns
+-------
+rSquared : :class:`~openturns.NumericalScalar`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getAdjustedRSquared
+"Accessor to the Adjusted R-squared test.
+
+Returns
+-------
+adjustedRSquared : :class:`~openturns.NumericalScalar`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getFisherScore
+"Accessor to the Fisher test.
+
+Returns
+-------
+fisherScore : :class:`~openturns.NumericalScalar`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::getFisherPValue
+"Accessor to the Fisher p value.
+
+Returns
+-------
+fisherPValue : :class:`~openturns.NumericalScalar`
+"
 
 // ---------------------------------------------------------------------
 
@@ -93,7 +236,7 @@ It is recomanded to test with both `True` and `False` values."
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OTLMR::LinearModelAnalysis::getNormalityTestResultKolmogorov
+%feature("docstring") OTLMR::LinearModelAnalysis::getNormalityTestResultKolmogorovSmirnov
 "Performs Kolmogorov test to check gaussian assumption of the model
 
 Returns
@@ -122,3 +265,101 @@ Notes
 We chech that the residual is gaussian thanks to :class:`~openturns.NormalityTest::AndersonDarling`"
 
 // ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::drawResidualsVsFitted
+"Accessor to plot of residuals versus fitted values.
+
+Returns
+-------
+graph : :class:`~openturns.Graph`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::drawScaleLocation
+"Accessor to a Scale-Location plot of sqrt(| residuals |) versus fitted values.
+
+Returns
+-------
+graph : :class:`~openturns.Graph`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::drawQQplot
+"Accessor to plot a Normal quantiles-quantiles plot of standardized residuals.
+
+Returns
+-------
+graph : :class:`~openturns.Graph`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::drawCookDistance
+"Accessor to plot of Cook's distances versus row labels.
+
+Returns
+-------
+graph : :class:`~openturns.Graph`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::drawResidualsVsLeverages
+"Accessor to plot of residuals versus leverages that adds bands corresponding to Cook's distances of 0.5 and 1.
+
+Returns
+-------
+graph : :class:`~openturns.Graph`
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OTLMR::LinearModelAnalysis::drawCookVsLeverages
+"Accessor to plot of Cook's distances versus leverage/(1-leverage). 
+
+Returns
+-------
+graph : :class:`~openturns.Graph`
+"
+
+"
+Examples
+--------
+>>> import openturns as ot
+>>> import otlmr
+>>> ot.RandomGenerator.SetSeed(0)
+>>> distribution = ot.Normal()
+>>> Xsample = distribution.getSample(30)
+>>> func = ot.NumericalMathFunction('x', '2 * x + 1')
+>>> Ysample = func(Xsample) + ot.Normal().getSample(30)
+>>> algo = otlmr.LinearModelAlgorithm(Ysample, Xsample)
+>>> result = algo.getResult()
+>>> analysis = otlmr.LinearModelAnalysis(result)
+>>> print(analysis)
+Call:
+Basis( [[outputVariable]->[1],[outputVariable]->[outputVariable]] )
+
+ Coefficients:
+                                   | Estimate    | Std Error   | t value     | Pr(>|t|)    | 
+--------------------------------------------------------------------------------------------
+[outputVariable]->[1]              | -0.501231   | 0.0853548   | -5.87232    | 2.58167e-06 | 
+[outputVariable]->[outputVariable] | 0.410475    | 0.0360555   | 11.3845     | 5.10531e-12 | 
+--------------------------------------------------------------------------------------------
+
+ Residual standard error: 0.42458 on 28 degrees of freedom 
+ F-statistic: 129.61 ,  p-value: 3.2199e-12
+---------------------------------
+Multiple R-squared   | 0.822343 | 
+Adjusted R-squared   | 0.815998 | 
+---------------------------------
+
+---------------------------------
+Normality test       | p-value  | 
+---------------------------------
+Anderson-Darling     | 0.237946 | 
+Chi-Squared          | 0.026711 | 
+Kolmogorov-Smirnov   | 0.769622 | 
+---------------------------------
+"
