Add tests for LinearModelAnalysis

--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -84,6 +84,7 @@ include_directories ( ${INTERNAL_INCLUDE_DIRS} )
 
 
 ot_check_test ( LinearModelAlgorithm_std )
+ot_check_test ( LinearModelAnalysis_std )
 
 
 add_custom_target ( cppcheck COMMAND ${CMAKE_CTEST_COMMAND} -R "^cppcheck_"
