--- a/python/src/LinearModelAnalysis_doc.i.in
+++ b/python/src/LinearModelAnalysis_doc.i.in
@@ -31,7 +31,7 @@ tests. If :math:`X` is scalar, a graphical validation test exists, that draws
 the residual couples :math:`(\epsilon_i, \epsilon_{i+1})`, where the residual
 :math:`\epsilon_i` is evaluated on the samples :math:`(Xsample, Ysample)`:
 :math:`\epsilon_i  = Ysample_i - \tilde{Y}_i` with
-:math:`\tilde{Y}_i = a_0 + a_1 + Xsample_i`. The OpenTURNS method is
+:math:`\tilde{Y}_i = a_0 + \sum_{j=1}^{n} a_j \ (Xsample)_{ij}`. The OpenTURNS method is
 :class:`~openturns.VisualTest_DrawLinearModelResidual`.
 
 By default, labels of the 3 most significant points are displayed on graphs.
