--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,21 @@ sudo: required
 install:
   - curl http://ubuntu.openturns.org/openturns.org-repo.key | sudo apt-key add -
   - echo deb http://ubuntu.openturns.org precise main | sudo tee /etc/apt/sources.list.d/openturns.list
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo add-apt-repository ppa:martin-gieseking/ppa -y
   - sudo apt-get update
-  - sudo apt-get -y install libopenturns-dev python-openturns r-other-rot cmake gfortran swig texlive-latex-recommended texlive-fonts-recommended texlive-latex-extra python-sphinx python-matplotlib dvisvgm
+  - sudo apt-get -y install libopenturns-dev python-openturns r-other-rot cmake gfortran swig texlive-latex-recommended texlive-fonts-recommended texlive-latex-extra python-sphinx python-matplotlib
+# dvisvgm
+  - sudo apt-get -y install gcc-4.8 g++-4.8 gfortran-4.8 libkpathsea-dev libpotrace-dev python-lxml xmlto asciidoc
+  - export CXX="g++-4.8" CC="gcc-4.8"
+  - git clone https://github.com/mgieseki/dvisvgm.git
+  - pushd dvisvgm
+  - ./autogen.sh
+  - ./configure --prefix=$HOME/.local
+  - make -j2
+  - make install
+  - export PATH=$PATH:$HOME/.local/bin
+  - popd
 # sphinx >=1.2 is looking better
   - pip install git+https://github.com/sphinx-doc/sphinx.git --user
 
